--- a/mlvision/MLVisionExample/Base.lproj/Main.storyboard
+++ b/mlvision/MLVisionExample/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0Q6-lG-sCk">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -35,93 +36,70 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xs4-mo-RjW">
-                                <rect key="frame" x="0.0" y="488" width="375" height="180"/>
+                                <rect key="frame" x="0.0" y="667" width="375" height="1"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="180" id="f3t-1V-izd"/>
+                                    <constraint firstAttribute="height" constant="1" id="f3t-1V-izd"/>
                                 </constraints>
                                 <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                             </pickerView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="POq-8j-gOJ" userLabel="Top Toolbar">
-                                <rect key="frame" x="0.0" y="56" width="375" height="44"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cCp-tA-gDT">
+                                <rect key="frame" x="0.0" y="82" width="375" height="547"/>
+                            </imageView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="center" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yof-fW-vlO" userLabel="Bottom Toolbar">
+                                <rect key="frame" x="0.0" y="615" width="375" height="44"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="it0-iL-OwQ"/>
+                                    <constraint firstAttribute="height" constant="44" id="74h-Pf-w4T"/>
                                 </constraints>
                                 <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Ntc-CQ-liM"/>
-                                    <barButtonItem image="photo_library" id="cQ8-BV-rH6" userLabel="Photo Library Button">
-                                        <connections>
-                                            <action selector="openPhotoLibrary:" destination="BYZ-38-t0r" id="1Jr-zi-I6V"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="eph-cT-Zvt"/>
-                                    <barButtonItem image="photo_camera" id="jD4-E9-bbj" userLabel="Photo Camera Button">
-                                        <connections>
-                                            <action selector="openCamera:" destination="BYZ-38-t0r" id="3cs-Py-gWB"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="v2M-Hr-v21"/>
                                     <barButtonItem enabled="NO" image="video_camera" id="M1D-Qg-lKI" userLabel="Video Camera Button">
                                         <connections>
                                             <segue destination="YXl-5B-mBF" kind="show" identifier="showCameraViewController" id="M0h-0G-c32"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="aEw-JJ-oRD"/>
-                                    <barButtonItem image="cloud_download" style="plain" id="dpl-CD-O71" userLabel="Download Model Button">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="v2M-Hr-v21"/>
+                                    <barButtonItem image="photo_camera" id="jD4-E9-bbj" userLabel="Photo Camera Button">
                                         <connections>
-                                            <action selector="downloadOrDeleteModel:" destination="BYZ-38-t0r" id="Snl-c4-XyJ"/>
+                                            <action selector="openCamera:" destination="BYZ-38-t0r" id="3cs-Py-gWB"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="1ha-dt-VEM"/>
-                                </items>
-                            </toolbar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cCp-tA-gDT">
-                                <rect key="frame" x="0.0" y="106" width="375" height="344"/>
-                            </imageView>
-                            <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="xaG-Fk-Kew">
-                                <rect key="frame" x="0.0" y="100" width="375" height="6"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="6" id="ENY-EP-7u6"/>
-                                </constraints>
-                            </progressView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="yof-fW-vlO" userLabel="Bottom Toolbar">
-                                <rect key="frame" x="0.0" y="450" width="375" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="74h-Pf-w4T"/>
-                                </constraints>
-                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="eph-cT-Zvt"/>
+                                    <barButtonItem image="photo_library" id="cQ8-BV-rH6" userLabel="Photo Library Button">
+                                        <connections>
+                                            <action selector="openPhotoLibrary:" destination="BYZ-38-t0r" id="1Jr-zi-I6V"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="RLv-lI-aQm"/>
                                     <barButtonItem title="Detect" id="Dwb-uQ-3dE" userLabel="Detect Button">
                                         <connections>
                                             <action selector="detect:" destination="BYZ-38-t0r" id="oTX-fI-9ty"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem title="Next image" id="Glk-GE-iCa">
-                                        <connections>
-                                            <action selector="changeImage:" destination="BYZ-38-t0r" id="wi9-lu-Oqs"/>
-                                        </connections>
-                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="cR0-7i-Xm8"/>
                                 </items>
+                                <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </toolbar>
+                            <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="xaG-Fk-Kew">
+                                <rect key="frame" x="0.0" y="68" width="375" height="6"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="6" id="ENY-EP-7u6"/>
+                                </constraints>
+                            </progressView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="xaG-Fk-Kew" firstAttribute="width" secondItem="POq-8j-gOJ" secondAttribute="width" id="0A9-hi-nSv"/>
+                            <constraint firstItem="xaG-Fk-Kew" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="0A9-hi-nSv"/>
                             <constraint firstItem="cCp-tA-gDT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="45c-Cz-uBY"/>
-                            <constraint firstItem="POq-8j-gOJ" firstAttribute="top" secondItem="LHw-b6-B2a" secondAttribute="bottom" constant="12" id="7wp-P3-gcC"/>
                             <constraint firstItem="Xs4-mo-RjW" firstAttribute="top" secondItem="yof-fW-vlO" secondAttribute="bottom" constant="-6" id="Eqz-89-OCh"/>
-                            <constraint firstAttribute="trailing" secondItem="POq-8j-gOJ" secondAttribute="trailing" id="I0X-8i-nPT"/>
-                            <constraint firstItem="xaG-Fk-Kew" firstAttribute="leading" secondItem="POq-8j-gOJ" secondAttribute="leading" id="J0C-6D-Ifi"/>
+                            <constraint firstItem="xaG-Fk-Kew" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="-27" id="J0C-6D-Ifi"/>
                             <constraint firstAttribute="trailing" secondItem="cCp-tA-gDT" secondAttribute="trailing" id="UKP-ZW-thL"/>
                             <constraint firstItem="yof-fW-vlO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Wki-fU-blU"/>
-                            <constraint firstItem="POq-8j-gOJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cho-7Z-rGg"/>
                             <constraint firstAttribute="trailing" secondItem="yof-fW-vlO" secondAttribute="trailing" id="etE-tG-0CW"/>
                             <constraint firstAttribute="trailing" secondItem="Xs4-mo-RjW" secondAttribute="trailing" id="gvn-CW-6Xx"/>
-                            <constraint firstItem="xaG-Fk-Kew" firstAttribute="top" secondItem="POq-8j-gOJ" secondAttribute="bottom" id="hSN-NL-d34"/>
+                            <constraint firstItem="xaG-Fk-Kew" firstAttribute="top" secondItem="LHw-b6-B2a" secondAttribute="bottom" constant="56" id="hSN-NL-d34"/>
                             <constraint firstItem="yof-fW-vlO" firstAttribute="top" secondItem="cCp-tA-gDT" secondAttribute="bottom" id="oQg-Ks-4Jj"/>
                             <constraint firstItem="Ydg-C1-MLG" firstAttribute="top" secondItem="Xs4-mo-RjW" secondAttribute="bottom" constant="-1" id="rWN-Im-hnc"/>
                             <constraint firstItem="Xs4-mo-RjW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uNU-KO-ASb"/>
-                            <constraint firstItem="cCp-tA-gDT" firstAttribute="top" secondItem="xaG-Fk-Kew" secondAttribute="bottom" id="v4h-9Q-PbG"/>
+                            <constraint firstItem="cCp-tA-gDT" firstAttribute="top" secondItem="LHw-b6-B2a" secondAttribute="bottom" constant="38" id="v4h-9Q-PbG"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xYg-VP-pps">
@@ -130,7 +108,6 @@
                     <connections>
                         <outlet property="detectButton" destination="Dwb-uQ-3dE" id="8Hn-BT-3m1"/>
                         <outlet property="detectorPicker" destination="Xs4-mo-RjW" id="kFH-5K-Mcc"/>
-                        <outlet property="downloadOrDeleteModelButton" destination="dpl-CD-O71" id="JKy-Vj-6MP"/>
                         <outlet property="downloadProgressView" destination="xaG-Fk-Kew" id="h0c-hg-58T"/>
                         <outlet property="imageView" destination="cCp-tA-gDT" id="FIt-va-neE"/>
                         <outlet property="photoCameraButton" destination="jD4-E9-bbj" id="cf0-4Q-UL8"/>
@@ -177,18 +154,11 @@
                     </view>
                     <navigationItem key="navigationItem" id="8dJ-Hr-2St">
                         <nil key="title"/>
-                        <rightBarButtonItems>
-                            <barButtonItem image="switch_camera" id="kXj-bT-GY0" userLabel="Switch Camera Button">
-                                <connections>
-                                    <action selector="switchCamera:" destination="YXl-5B-mBF" id="sFo-ar-LIv"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem title="Detectors" id="jrI-gv-coB" userLabel="Detectors Button">
-                                <connections>
-                                    <action selector="selectDetector:" destination="YXl-5B-mBF" id="AjI-Jr-07c"/>
-                                </connections>
-                            </barButtonItem>
-                        </rightBarButtonItems>
+                        <barButtonItem key="rightBarButtonItem" image="switch_camera" id="kXj-bT-GY0" userLabel="Switch Camera Button">
+                            <connections>
+                                <action selector="switchCamera:" destination="YXl-5B-mBF" id="sFo-ar-LIv"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="cameraView" destination="Vwd-Qp-BMC" id="yRq-e8-30h"/>
@@ -201,10 +171,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cloud_download" width="16" height="16"/>
-        <image name="photo_camera" width="72" height="72"/>
-        <image name="photo_library" width="72" height="72"/>
-        <image name="switch_camera" width="72" height="72"/>
-        <image name="video_camera" width="72" height="72"/>
+        <image name="photo_camera" width="36" height="36"/>
+        <image name="photo_library" width="36" height="36"/>
+        <image name="switch_camera" width="36" height="36"/>
+        <image name="video_camera" width="36" height="36"/>
     </resources>
 </document>
